[package]
name = "edgeware-runtime"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime library"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
integer-sqrt = { workspace = true }
safe-mix = { workspace = true, default-features = false }
rustc-hex = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, optional = true }
static_assertions = { workspace = true }
log = { workspace = true, default-features = false }
rlp = { workspace = true, optional = true, default-features = false }
# for migrations

# primitives
sp-application-crypto = { workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false}
sp-inherents = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-keyring = { workspace = true, optional = true }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-npos-elections = { workspace = true, default-features = false }
sp-sandbox = { workspace = true, default-features = false }

# edgeware primitives
edgeware-primitives = { workspace = true, default-features = false }
edgeware-rpc-primitives-debug = { workspace = true, default-features = false }
edgeware-rpc-primitives-txpool = { workspace = true, default-features = false }

# pallet dependencies
pallet-assets = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false, features = ["runtime-benchmarks"] }
pallet-contracts = { workspace = true, default-features = false }
pallet-contracts-primitives = { workspace = true, default-features = false }
pallet-contracts-rpc-runtime-api = { workspace = true, default-features = false }
pallet-democracy = { workspace = true, default-features = false }
pallet-election-provider-multi-phase = { workspace = true, default-features = false }
pallet-elections-phragmen = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-randomness-collective-flip = { workspace = true, default-features = false }
pallet-recovery = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false, features = ["historical"] }
pallet-staking = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-tips = { workspace = true, default-features = false }
pallet-bounties = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-vesting = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-child-bounties = { workspace = true, default-features = false }
pallet-bags-list = { workspace = true, default-features = false }
treasury-reward = { workspace = true, default-features = false }
evm-runtime = { workspace = true, default-features = false }
pallet-dynamic-fee = { workspace = true, default-features = false }
pallet-base-fee = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-self-contained = { workspace = true, default-features = false }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }

pallet-evm = { workspace = true, default-features = false }
pallet-ethereum = { workspace = true, default-features = false, features = ["runtime-benchmarks"] }
pallet-evm-precompile-simple = { workspace = true, default-features = false }
pallet-evm-precompile-blake2 = { workspace = true, default-features = false }
pallet-evm-precompile-modexp = { workspace = true, default-features = false }
pallet-evm-precompile-bn128 = { workspace = true, default-features = false }
pallet-evm-precompile-dispatch = { workspace = true, default-features = false }
pallet-evm-precompile-ed25519 = { workspace = true, default-features = false }
pallet-evm-precompile-sha3fips = { workspace = true, default-features = false }
pallet-evm-precompile-curve25519 = { workspace = true, default-features = false }

sha3 = { workspace = true, default-features = false }
getrandom = { workspace = true, features = ["js"] }

# used for runtime benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
hex-literal = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
no-reaping = []
beresheet-runtime = []
fast-runtime = []
std = [
	"sha3/std",
	"scale-info/std",
	"sp-authority-discovery/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-aura/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-bags-list/std",
	"sp-block-builder/std",
	"parity-scale-codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
#	"pallet-conviction-voting/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-multisig/std",
	"sp-inherents/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"safe-mix/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"pallet-scheduler/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-preimage/std",
	"pallet-child-bounties/std",
	"sp-version/std",
	"sp-offchain/std",
	"edgeware-primitives/std",
	"treasury-reward/std",
	"fp-self-contained/std",
	"fp-rpc/std",
	"pallet-ethereum/std",
	"evm-runtime/std",
#	"evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-ed25519/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-curve25519/std",
	"pallet-dynamic-fee/std",
	"pallet-base-fee/std",
	"pallet-tips/std",
	"pallet-bounties/std",
	"sp-npos-elections/std",
#	"evm-tracing-events/std",
	"edgeware-rpc-primitives-debug/std",
	"edgeware-rpc-primitives-txpool/std",
	"frame-election-provider-support/std",
	"rlp/std",
	"sha3/std",
	"sp-sandbox/std",
]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = []

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-system-benchmarking",
]
