[package]
name = "edgeware-rpc-core-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, features = [ "std" ]}
futures = { workspace = true, features = [ "compat" ] }
jsonrpsee = { workspace = true, features = [ "macros", "server" ]}
edgeware-client-evm-tracing = { workspace = true }
edgeware-rpc-core-types = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }

sp-core = { workspace = true }
