[package]
name = "edgeware-rpc-core-trace"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum-types = "0.13.1"
futures = { version = "0.3.21", features = [ "compat" ] }
jsonrpsee = { version = "0.14.0", default-features = false, features = [ "macros", "server" ] }
edgeware-client-evm-tracing = { path = "../../evm-tracing" }
edgeware-rpc-core-types = { path = "../types" }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
