[package]
name = "edgeware-rpc-core-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = "0.14"
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = [ "with-codec" ] } # 
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25" }
