[package]
name = "edgeware-rpc-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
futures = { workspace = true, features = [ "compat" ] }
hex-literal = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server"] }
tokio = { workspace = true, features = [ "sync", "time" ] }

# Edgeware (copied from Moonbeam)
edgeware-client-evm-tracing = { workspace = true }
edgeware-rpc-core-debug = { workspace = true }
edgeware-rpc-core-types = { workspace = true }
edgeware-rpc-primitives-debug = { workspace = true, features = [ "std" ]  }

# Substrate
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true, features = [ "std" ] }
sp-block-builder = { workspace = true, features = [ "std" ] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = [ "std" ] }
sp-io = { workspace = true, features = [ "std" ] }
sp-runtime = { workspace = true, features = [ "std" ] }

# Frontier
ethereum = { workspace = true, features = [ "std", "with-codec" ] }
ethereum-types = { workspace = true, features = [ "std" ] }
evm = { workspace = true, features = [ "with-codec" ] } 
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc_binary_search_estimate" ] }
fp-rpc = { workspace = true, features = [ "std" ] }
# fc-storage
