[package]
name = "edgeware-rpc-trace"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", features = [ "with-codec" ] }
ethereum-types = "0.14"
futures = { version = "0.3" }
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.9"
tokio = { version = "1.10", features = [ "sync", "time" ] }
tracing = "0.1.34"

# Edgeware (copied from Moonbeam)
edgeware-client-evm-tracing = { path = "../../evm-tracing" }
edgeware-rpc-core-trace = { path = "../../rpc-core/trace" }
edgeware-rpc-core-types = { path = "../../rpc-core/types" }
edgeware-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Frontier
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = [ "with-codec" ] } # 
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }

