[package]
name = "edgeware-rpc-trace"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }
ethereum-types = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server"] }
serde = { workspace = true features = [ "derive" ] }
sha3 = { workspace = true }
tokio = { workspace = true ,features = [ "sync", "time" ] }
tracing = { workspace = true }

# Edgeware (copied from Moonbeam)
edgeware-client-evm-tracing = { workspace = true }
edgeware-rpc-core-trace = { workspace = true }
edgeware-rpc-core-types = { workspace = true }
edgeware-rpc-primitives-debug = { workspace = true }

# Substrate
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }

# Frontier
evm = { workspace = true, default-features = false, features = [ "with-codec" ] } # 
fc-consensus = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { workspace = true }
fp-rpc = { workspace = true }

