[package]
name = "edgeware-rpc-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
jsonrpsee = { version = "0.14.0", default-features = false, features = [ "macros", "server" ] }
rlp = "0.5"
serde = { version = "1.0.136", features = [ "derive" ] }
sha3 = "0.9"

# Moonbeam
edgeware-rpc-core-txpool = { path = "../../rpc-core/txpool" }
edgeware-rpc-primitives-txpool = { path = "../../../primitives/rpc/txpool" }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# Frontier
ethereum-types = "0.13.1"
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = [ "with-codec" ] } # 
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.25", features = [ "rpc_binary_search_estimate" ] }
