[package]
name = "edgeware-rpc-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
rlp = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
sha3 = { workspace = true }

# Edgeware - client & wasm
edgeware-rpc-core-txpool = { workspace = true }
edgeware-rpc-primitives-txpool = { workspace = true, features = [ "std" ] }

# Substrate - client & wasm
frame-system = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier - client & wasm
ethereum-types = { workspace = true, features = [ "std" ] }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
fc-rpc = { workspace = true }