[package]
name = "sc-consensus-aura"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
thiserror = "1.0"
futures = "0.3.21"
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
log = "0.4.8"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
async-trait = "0.1.50"

[dev-dependencies]
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
tempfile = "3.1.0"
parking_lot = "0.12.0"
