[package]
name = "sc-consensus-aura"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-block-builder = { workspace = true }
sc-block-builder = { workspace = true }
sc-client-api = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-inherents = { workspace = true }
sp-core = { workspace = true }
sp-blockchain = { workspace = true }
sc-consensus-slots = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-keystore = { workspace = true }
sc-telemetry = { workspace = true }
prometheus-endpoint = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
sp-timestamp = { workspace = true }
sp-keyring = { workspace = true }
sp-tracing = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-test = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tempfile = { workspace = true }
parking_lot = { workspace = true }
