[package]
name = "sc-consensus-manual-seal"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Manual sealing engine for Substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
assert_matches = { workspace = true }
async-trait = { workspace = true }
sc-client-api = { workspace = true, default-features = false }
sc-consensus = { workspace = true, default-features = false }
sc-consensus-babe = { workspace = true, default-features = false }
sc-consensus-aura = { workspace = true, default-features = false }
sc-consensus-epochs = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-consensus = { workspace = true, default-features = false }
sp-consensus-slots = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-keystore = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
prometheus-endpoint = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sc-basic-authorship = { workspace = true, default-features = false }
substrate-test-runtime-client = { workspace = true, default-features = false }
substrate-test-runtime-transaction-pool = { workspace = true, default-features = false }
