[package]
name = "edgeware-rpc-primitives-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
environmental = { workspace = true, default-features = false }
ethereum = { workspace = true, default-features = false, features = [ "with-codec" ] }
ethereum-types = { workspace = true, default-features = false }
hex = { workspace = true, optional = true, features = [ "serde" ] }
serde = { workspace = true, optional = true, features = [ "derive" ] }
serde_json = { workspace = true, optional = true }

# Substrate
parity-scale-codec = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"hex",
	"serde",
	"serde_json",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
