[package]
name = "evm-tracing-events"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
environmental = { workspace = true, default-features = false }

# Substrate
parity-scale-codec = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }

# Ethereum
ethereum = { workspace = true, default-features = false, features = [ "with-codec" ] }
ethereum-types = { workspace = true, default-features = false }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] } # 
evm-gasometer = { workspace = true, default-features = false }
evm-runtime = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"sp-runtime-interface/std",
]
evm-tracing = [ "evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing" ]
