[package]
name = "generate-bags"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Bag threshold generation script for pallet-bag-list"
readme = "README.md"

[dependencies]
# FRAME
frame-support = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }

# primitives
sp-io = { workspace = true, default-features = false }

# third party
chrono = { workspace = true }
git2 = { workspace = true, default-features = false }
num-format = { workspace = true }
