[package]
name = "node-runtime-generate-bags"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Bag threshold generation script for pallet-bag-list and node-runtime."
readme = "README.md"

[dependencies]
edgeware-runtime = { workspace = true }
generate-bags = { workspace = true }

# third-party
clap = { workspace = true, features = ["derive"] }
